status change with propoer dto done
