# dto/task_status.go
@@ -1,0 +1,5 @@
+package dto
+
+type StatusRequest struct {
+	Status string `json:"status" enum:"TODO,DOING,DONE"`
+}
